# tuin-app

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py  plantnet.py  species.py
backend/data/: species.json
backend/tests/: conftest.py  test_api.py  test_plantnet.py  test_species.py
docs/: DEPLOY.md  tuinapp_projectplan.pptx
docs/superpowers/plans/: 2026-07-19-backend-poc.md
docs/superpowers/specs/: 2026-07-19-backend-poc-design.md
frontend/: README.md  app.js  index.html  styles.css
